--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
             <a href="#" class="logo">🎨 PlaceFlow</a>
             <ul class="nav-links">
                 <li><a href="#getting-started">Getting Started</a></li>
-                <li><a href="#reference">Reference</a></li>
-                <li><a href="#examples">Examples</a></li>
-                <li><a href="#vscode">VSCode</a></li>
+                <li><a href="reference/">Reference</a></li>
+                <li><a href="examples/">Examples</a></li>
+                <li><a href="vscode-guide/">VSCode</a></li>
             </ul>
         </nav>
     </header>
